--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="container1">
     <div class="Box1">
         <div class="Box2"></div>
         <div class="Box3"></div>
@@ -27,6 +29,8 @@
             <i class="fa-sharp fa-solid fa-envelope-open-text fa-2x icon" style="color: white;"></i>
         </div>
     </div>
+    </div>
+</div>
     <script src="script.js"></script>
 </body>
 
